# hannas-chat-agent

./: .gitignore  pyproject.toml  render.yaml  requirements.txt
hannas-agent/: main.py  pyproject.toml
hannas-agent/static/: chat-widget.html
hannas_agent/: main.py  rag_service.py
hannas_agent/config/: logging_config.py
hannas_agent/documents/: 01-company-overview.md  02-postpartum-doula-services.md  03-lactation-consultation.md  04-meal-delivery-service.md  05-pricing-and-packages.md  06-faq.md  frequently-asked-questions.md  introduction.md  policy.md  pricing.md  services.md
hannas_agent/prompts/: system_prompt.txt
hannas_agent/static/: chat-widget-wix.html  chat-widget.css  chat-widget.html  chat-widget.js
