[project]
name = "hannas-chat-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
